third_party/rust/derive_more/tests/compile_fail/debug/legacy_fmt_syntax.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug(fmt = "Stuff({}): {}", "bar")]
    bar: String,
}

fn main() {}
